<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btn_co"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BAF3D9"
    tools:context=".displayPrice">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-black"
        android:shadowColor="#000000"
        android:shadowDx="20"
        android:text="@string/app_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/txt_mile"
        android:layout_width="310dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/mile_label_val"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/txt_car"
        android:layout_width="313dp"
        android:layout_height="39dp"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:text="@string/car_label_val"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/txt_total"
        android:layout_width="313dp"
        android:layout_height="39dp"
        android:layout_marginTop="116dp"
        android:gravity="center"
        android:text="@string/total_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="158dp"
        android:text="@string/btn_req"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_car" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="72dp"
        android:layout_height="58dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/btn_back"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>